--- a/index.html
+++ b/index.html
@@ -31,5 +31,8 @@
 </main>
 <!-- partial -->
   
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
