name list added and displayed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h3>Hello from Green Fox</h3>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque  ultrices porta magna, vestibulum dapibus quam vestibulum et. Vivamus in tempor nulla. Curabitur laoreet elementum ante, auctor rutrum justo tincidunt sed. Aliquam erat volutpat. Nulla id nisl massa. augue porta semper. </p>
   <h3>Let's see a list</h3>
-  <ul type="square">
+  <ul id="myList" type="square">
     <li>This is</li>
     <li>a very nice</li>
     <li>list</li>
